--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/Greek_Omega_letter_(red).png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>God Of Api War</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>God Of War - API</title>
+    <meta name="title" content="God Of War - API" />
+    <meta name="description" content="A simple RESTfull API about God Of War saga." />
+    <meta name="keywords" content="God of War, API, Kratos, Mitología Nórdica, Videojuegos, PokeAPI, Sparta, Aesir, Valkyrias">
+    <meta name="author" content="KuKe-dev">
+
+    <!-- Favicon -->
+    <link rel="icon" href="./public/Greek_Omega_letter_(red).png" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/Greek_Omega_letter_(red).png">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://god-of-war-api-fjw3.onrender.com/" />
+    <meta property="og:title" content="God Of War - API" />
+    <meta property="og:description" content="A simple RESTfull API about God Of War saga." />
+    <meta property="og:image" content="./public/thumb gowapi.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://god-of-war-api-fjw3.onrender.com/" />
+    <meta property="twitter:title" content="God Of War - API" />
+    <meta property="twitter:description" content="A simple RESTfull API about God Of War saga." />
+    <meta property="twitter:image" content="./public/thumb gowapi.png" />
   </head>
   <body>
     <div id="root"></div>
