--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -27,6 +27,8 @@
     <meta property="twitter:title" content="God Of War - API" />
     <meta property="twitter:description" content="A simple RESTfull API about God Of War saga." />
     <meta property="twitter:image" content="./public/thumb gowapi.png" />
+
+    <meta name="google-site-verification" content="bIebymnsU-MfJLt6wLnlD5NrllAKV19vfUSGKnSmxuw" />
   </head>
   <body>
     <div id="root"></div>
