--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -19,14 +19,14 @@
     <meta property="og:url" content="https://god-of-war-api-fjw3.onrender.com/" />
     <meta property="og:title" content="God Of War - API" />
     <meta property="og:description" content="A simple RESTfull API about God Of War saga." />
-    <meta property="og:image" content="https://ibb.co/dJD3BNgg" />
+    <meta property="og:image" content="https://i.ibb.co/93Wfnxtt/thumb-gowapi.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://god-of-war-api-fjw3.onrender.com/" />
     <meta property="twitter:title" content="God Of War - API" />
     <meta property="twitter:description" content="A simple RESTfull API about God Of War saga." />
-    <meta property="twitter:image" content="https://ibb.co/dJD3BNgg" />
+    <meta property="twitter:image" content="https://i.ibb.co/93Wfnxtt/thumb-gowapi.png" />
 
     <meta name="google-site-verification" content="bIebymnsU-MfJLt6wLnlD5NrllAKV19vfUSGKnSmxuw" />
   </head>
