--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -20,6 +20,9 @@
     <meta property="og:title" content="God Of War - API" />
     <meta property="og:description" content="A simple RESTfull API about God Of War saga." />
     <meta property="og:image" content="https://i.ibb.co/93Wfnxtt/thumb-gowapi.png" />
+    <meta property="og:image:width" content="1904">
+    <meta property="og:image:height" content="900">
+
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
