--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="A simple RESTfull API about God Of War saga." />
     <meta name="keywords" content="God of War, API, Kratos, Mitología Nórdica, Videojuegos, PokeAPI, Sparta, Aesir, Valkyrias">
     <meta name="author" content="KuKe-dev">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
     <link rel="icon" href="./public/Greek_Omega_letter_(red).png" type="image/x-icon">
