--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="God of War, API, Kratos, Mitología Nórdica, Videojuegos, PokeAPI, Sparta, Aesir, Valkyrias">
     <meta name="author" content="KuKe-dev">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://god-of-war-api-fjw3.onrender.com/"/>
 
     <!-- Favicon -->
     <link rel="icon" href="./public/Greek_Omega_letter_(red).png" type="image/x-icon">
