--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,7 +6,7 @@
     <!-- Primary Meta Tags -->
     <title>God Of War - API</title>
     <meta name="title" content="God Of War - API" />
-    <meta name="description" content="A simple RESTfull API about God Of War saga." />
+    <meta name="description" content="A simple RESTfull API about God Of War saga. Ask for information about Kratos, Atreus, Zeus and much more." />
     <meta name="keywords" content="God of War, API, Kratos, Mitología Nórdica, Videojuegos, PokeAPI, Sparta, Aesir, Valkyrias">
     <meta name="author" content="KuKe-dev">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
