--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -18,20 +18,20 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://god-of-war-api-fjw3.onrender.com/" />
+    <meta property="og:url" content="https://god-of-war-api.vercel.app/" />
     <meta property="og:title" content="God Of War - API" />
     <meta property="og:description" content="A simple RESTfull API about God Of War saga." />
-    <meta property="og:image" content="https://i.ibb.co/93Wfnxtt/thumb-gowapi.png" />
+    <meta property="og:image" content="https://i.ibb.co/39WsqQcv/Preview.png" />
     <meta property="og:image:width" content="1904">
     <meta property="og:image:height" content="900">
 
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://god-of-war-api-fjw3.onrender.com/" />
+    <meta property="twitter:url" content="https://god-of-war-api.vercel.app/" />
     <meta property="twitter:title" content="God Of War - API" />
     <meta property="twitter:description" content="A simple RESTfull API about God Of War saga." />
-    <meta property="twitter:image" content="https://i.ibb.co/93Wfnxtt/thumb-gowapi.png" />
+    <meta property="twitter:image" content="https://i.ibb.co/39WsqQcv/Preview.png" />
 
     <meta name="google-site-verification" content="WopwRzVr9v5_-jldtkK9tQeuDGqRouzdsu_qX2IxQGQ" />
   </head>
